target/generated-sources/antlr4/br/edu/iff/je/JeParser.java
// Generated from br/edu/iff/je/Je.g4 by ANTLR 4.13.2
package br.edu.iff.je;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, DELIM_LINHA=2, DEC_VAR=3, PROCEDIMENTO=4, EH=5, SEPARADOR=6, 
		DELIM_CAMPO=7, INICIO=8, FIM=9, ESCREVER=10, LER=11, DENTRO_DE=12, GUARDAR=13, 
		DELIM_INTERVALO=14, CONTAR=15, RETORNAR=16, FUNCAO=17, ENQUANTO=18, SENAO=19, 
		VERDADEIRO=20, FALSO=21, ENTAO=22, ISTO=23, IR=24, REPETIR=25, FAZER=26, 
		PARA=27, CONTRARIO=28, INTERROMPER=29, E_LOGICO=30, OU_LOGICO=31, NAO=32, 
		EM_FRENTE=33, INTEIRO=34, REAL=35, TEXTO=36, DIGITO=37, LOGICO=38, A_PAR=39, 
		F_PAR=40, A_COLC=41, F_COLC=42, MULT=43, DIV=44, SOMA=45, SUB=46, IGUAL=47, 
		DIFERENTE=48, MAIOR=49, MENOR=50, MAIORIGUAL=51, MENORIGUAL=52, CARACTERE=53, 
		CADEIA_CARACT=54, NUMERAL_REAL=55, NUMERAL_INT=56, ESPACO=57, IDENTIFICADOR=58;
	public static final int
		RULE_programa = 0, RULE_lista_dec_variaveis = 1, RULE_dec_variavel = 2, 
		RULE_tipo = 3, RULE_tipo_primitivo = 4, RULE_tipo_vetor = 5, RULE_tipo_matriz = 6, 
		RULE_tipo_registro = 7, RULE_lista_campos = 8, RULE_lista_dec_modulos = 9, 
		RULE_modulo = 10, RULE_procedimento = 11, RULE_funcao = 12, RULE_lista_parametros = 13, 
		RULE_parametro = 14, RULE_lista_comandos = 15, RULE_comando = 16, RULE_comando_em_frente = 17, 
		RULE_comando_interromper = 18, RULE_comando_condicional_escolher = 19, 
		RULE_lista_casos = 20, RULE_caso = 21, RULE_caso_padrao = 22, RULE_valor_caso = 23, 
		RULE_intervalo_caso = 24, RULE_comando_condicional_se = 25, RULE_comando_repeticao_repetir = 26, 
		RULE_comando_repeticao_enquanto = 27, RULE_comando_repeticao_ir = 28, 
		RULE_intervalo = 29, RULE_comando_chamada_modulo = 30, RULE_comando_escrever = 31, 
		RULE_comando_ler = 32, RULE_comando_atribuir = 33, RULE_campo_registro = 34, 
		RULE_comando_retornar = 35, RULE_expressao = 36, RULE_expressao_aritmetica = 37, 
		RULE_termo_aritmetico = 38, RULE_fator_aritmetico = 39, RULE_expressao_relacional = 40, 
		RULE_operador_booleano = 41, RULE_termo_relacional = 42, RULE_fator_relacional = 43, 
		RULE_operador_relacional = 44, RULE_chamada = 45, RULE_lista_argumentos = 46, 
		RULE_argumento = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "lista_dec_variaveis", "dec_variavel", "tipo", "tipo_primitivo", 
			"tipo_vetor", "tipo_matriz", "tipo_registro", "lista_campos", "lista_dec_modulos", 
			"modulo", "procedimento", "funcao", "lista_parametros", "parametro", 
			"lista_comandos", "comando", "comando_em_frente", "comando_interromper", 
			"comando_condicional_escolher", "lista_casos", "caso", "caso_padrao", 
			"valor_caso", "intervalo_caso", "comando_condicional_se", "comando_repeticao_repetir", 
			"comando_repeticao_enquanto", "comando_repeticao_ir", "intervalo", "comando_chamada_modulo", 
			"comando_escrever", "comando_ler", "comando_atribuir", "campo_registro", 
			"comando_retornar", "expressao", "expressao_aritmetica", "termo_aritmetico", 
			"fator_aritmetico", "expressao_relacional", "operador_booleano", "termo_relacional", 
			"fator_relacional", "operador_relacional", "chamada", "lista_argumentos", 
			"argumento"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'p\\u00F5g\\u00E3ma'", "';'", "'v\\u00E3so'", "'posedim\\u1EBDto'", 
			"'v\\u1EBD'", "','", "'.'", "'p\\u1EBD_j\\u1EBDg'", "'kar'", "'ven'", 
			"'to_ke'", "'k\\u00E3'", "'r\\u00E3g'", "'->'", "'n\\u0129kr\\u00E9n'", 
			"'kyr\\u00E3'", "'f\\u0169s\\u00E3'", "'myr'", "'jo'", "'p\\u1EBD'", 
			"'p\\u1EBD_v\\u00F3'", "'ge'", "'tag'", "'m\\u0169'", "'m\\u00E3n'", 
			"'han'", "'j\\u00E9'", "'j\\u00E3vo'", "'g\\u00E1v'", "'&&'", "'||'", 
			"'t\\u0169'", "'jy'", "'\\u0129telo'", "'reau'", "'tesetu'", "'djisitu'", 
			"'l\\u00F3siko'", "'('", "')'", "'['", "']'", "'*'", "'/'", "'+'", "'-'", 
			"'=='", "'<>'", "'>'", "'<'", "'>='", "'<='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAMA", "DELIM_LINHA", "DEC_VAR", "PROCEDIMENTO", "EH", "SEPARADOR", 
			"DELIM_CAMPO", "INICIO", "FIM", "ESCREVER", "LER", "DENTRO_DE", "GUARDAR", 
			"DELIM_INTERVALO", "CONTAR", "RETORNAR", "FUNCAO", "ENQUANTO", "SENAO", 
			"VERDADEIRO", "FALSO", "ENTAO", "ISTO", "IR", "REPETIR", "FAZER", "PARA", 
			"CONTRARIO", "INTERROMPER", "E_LOGICO", "OU_LOGICO", "NAO", "EM_FRENTE", 
			"INTEIRO", "REAL", "TEXTO", "DIGITO", "LOGICO", "A_PAR", "F_PAR", "A_COLC", 
			"F_COLC", "MULT", "DIV", "SOMA", "SUB", "IGUAL", "DIFERENTE", "MAIOR", 
			"MENOR", "MAIORIGUAL", "MENORIGUAL", "CARACTERE", "CADEIA_CARACT", "NUMERAL_REAL", 
			"NUMERAL_INT", "ESPACO", "IDENTIFICADOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Je.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(JeParser.PROGRAMA, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(JeParser.IDENTIFICADOR, 0); }
		public TerminalNode DELIM_LINHA() { return getToken(JeParser.DELIM_LINHA, 0); }
		public TerminalNode DEC_VAR() { return getToken(JeParser.DEC_VAR, 0); }
		public Lista_dec_variaveisContext lista_dec_variaveis() {
			return getRuleContext(Lista_dec_variaveisContext.class,0);
		}
		public Lista_dec_modulosContext lista_dec_modulos() {
			return getRuleContext(Lista_dec_modulosContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(PROGRAMA);
			setState(97);
			match(IDENTIFICADOR);
			setState(98);
			match(DELIM_LINHA);
			setState(99);
			match(DEC_VAR);
			setState(100);
			lista_dec_variaveis();
			setState(101);
			lista_dec_modulos();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_dec_variaveisContext extends ParserRuleContext {
		public List<Dec_variavelContext> dec_variavel() {
			return getRuleContexts(Dec_variavelContext.class);
		}
		public Dec_variavelContext dec_variavel(int i) {
			return getRuleContext(Dec_variavelContext.class,i);
		}
		public Lista_dec_variaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_dec_variaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterLista_dec_variaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitLista_dec_variaveis(this);
		}
	}

	public final Lista_dec_variaveisContext lista_dec_variaveis() throws RecognitionException {
		Lista_dec_variaveisContext _localctx = new Lista_dec_variaveisContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lista_dec_variaveis);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(103);
					dec_variavel();
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dec_variavelContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(JeParser.IDENTIFICADOR, 0); }
		public TerminalNode EH() { return getToken(JeParser.EH, 0); }
		public TerminalNode DELIM_LINHA() { return getToken(JeParser.DELIM_LINHA, 0); }
		public Dec_variavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterDec_variavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitDec_variavel(this);
		}
	}

	public final Dec_variavelContext dec_variavel() throws RecognitionException {
		Dec_variavelContext _localctx = new Dec_variavelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec_variavel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			tipo();
			setState(110);
			match(IDENTIFICADOR);
			setState(111);
			match(EH);
			setState(112);
			match(DELIM_LINHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public Tipo_primitivoContext tipo_primitivo() {
			return getRuleContext(Tipo_primitivoContext.class,0);
		}
		public Tipo_vetorContext tipo_vetor() {
			return getRuleContext(Tipo_vetorContext.class,0);
		}
		public Tipo_matrizContext tipo_matriz() {
			return getRuleContext(Tipo_matrizContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(JeParser.IDENTIFICADOR, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				tipo_primitivo();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				tipo_vetor();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				tipo_matriz();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				match(IDENTIFICADOR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_primitivoContext extends ParserRuleContext {
		public TerminalNode INTEIRO() { return getToken(JeParser.INTEIRO, 0); }
		public TerminalNode REAL() { return getToken(JeParser.REAL, 0); }
		public TerminalNode TEXTO() { return getToken(JeParser.TEXTO, 0); }
		public TerminalNode DIGITO() { return getToken(JeParser.DIGITO, 0); }
		public TerminalNode LOGICO() { return getToken(JeParser.LOGICO, 0); }
		public Tipo_primitivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_primitivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterTipo_primitivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitTipo_primitivo(this);
		}
	}

	public final Tipo_primitivoContext tipo_primitivo() throws RecognitionException {
		Tipo_primitivoContext _localctx = new Tipo_primitivoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo_primitivo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 532575944704L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_vetorContext extends ParserRuleContext {
		public Tipo_primitivoContext tipo_primitivo() {
			return getRuleContext(Tipo_primitivoContext.class,0);
		}
		public TerminalNode A_COLC() { return getToken(JeParser.A_COLC, 0); }
		public TerminalNode NUMERAL_INT() { return getToken(JeParser.NUMERAL_INT, 0); }
		public TerminalNode F_COLC() { return getToken(JeParser.F_COLC, 0); }
		public Tipo_vetorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_vetor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterTipo_vetor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitTipo_vetor(this);
		}
	}

	public final Tipo_vetorContext tipo_vetor() throws RecognitionException {
		Tipo_vetorContext _localctx = new Tipo_vetorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo_vetor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			tipo_primitivo();
			setState(123);
			match(A_COLC);
			setState(124);
			match(NUMERAL_INT);
			setState(125);
			match(F_COLC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_matrizContext extends ParserRuleContext {
		public Tipo_primitivoContext tipo_primitivo() {
			return getRuleContext(Tipo_primitivoContext.class,0);
		}
		public TerminalNode A_COLC() { return getToken(JeParser.A_COLC, 0); }
		public List<TerminalNode> NUMERAL_INT() { return getTokens(JeParser.NUMERAL_INT); }
		public TerminalNode NUMERAL_INT(int i) {
			return getToken(JeParser.NUMERAL_INT, i);
		}
		public TerminalNode SEPARADOR() { return getToken(JeParser.SEPARADOR, 0); }
		public TerminalNode F_COLC() { return getToken(JeParser.F_COLC, 0); }
		public Tipo_matrizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_matriz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterTipo_matriz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitTipo_matriz(this);
		}
	}

	public final Tipo_matrizContext tipo_matriz() throws RecognitionException {
		Tipo_matrizContext _localctx = new Tipo_matrizContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo_matriz);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			tipo_primitivo();
			setState(128);
			match(A_COLC);
			setState(129);
			match(NUMERAL_INT);
			setState(130);
			match(SEPARADOR);
			setState(131);
			match(NUMERAL_INT);
			setState(132);
			match(F_COLC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_registroContext extends ParserRuleContext {
		public TerminalNode ISTO() { return getToken(JeParser.ISTO, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(JeParser.IDENTIFICADOR, 0); }
		public TerminalNode EH() { return getToken(JeParser.EH, 0); }
		public Lista_camposContext lista_campos() {
			return getRuleContext(Lista_camposContext.class,0);
		}
		public TerminalNode FIM() { return getToken(JeParser.FIM, 0); }
		public Tipo_registroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_registro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterTipo_registro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitTipo_registro(this);
		}
	}

	public final Tipo_registroContext tipo_registro() throws RecognitionException {
		Tipo_registroContext _localctx = new Tipo_registroContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo_registro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ISTO);
			setState(135);
			match(IDENTIFICADOR);
			setState(136);
			match(EH);
			setState(137);
			lista_campos();
			setState(138);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_camposContext extends ParserRuleContext {
		public TerminalNode DELIM_LINHA() { return getToken(JeParser.DELIM_LINHA, 0); }
		public List<Dec_variavelContext> dec_variavel() {
			return getRuleContexts(Dec_variavelContext.class);
		}
		public Dec_variavelContext dec_variavel(int i) {
			return getRuleContext(Dec_variavelContext.class,i);
		}
		public Lista_camposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_campos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).enterLista_campos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JeListener ) ((JeListener)listener).exitLista_campos(this);
		}
	}

	public final Lista_camposContext lista_campos() throws RecognitionException {
		Lista_camposContext _localctx = new Lista_camposContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lista_campos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(140);
				dec_variavel();
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 288230908727656448L) != 0) );
			setState(145);
			match(DELIM_LINHA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
